<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/brown"
    tools:context="com.example.a10120766uts.Fragment.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_centerVertical="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/reyka"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/namahead"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:fontFamily="@font/nunito_bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nimhead"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/bg_lightbrown"
                android:textSize="12sp"
                android:padding="3dp"
                android:fontFamily="@font/nunito_bold" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/card_background"
        android:elevation="36dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="42dp"
                android:layout_marginRight="42dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/title_aboutme"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:fontFamily="@font/nunito_bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/aboutme"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    android:fontFamily="@font/nunito_bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="25dp"
                    android:text="@string/title_contactme"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:fontFamily="@font/nunito_bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/grey" />

                <!--sosmed baris 1-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/iv_facebook"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:src="@drawable/contact_facebook" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/iv_instagram"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:src="@drawable/contact_instagram" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/iv_twitter"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:src="@drawable/contact_twitter" />
                    </LinearLayout>

                </LinearLayout>

                <!--sosmed baris 2-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/iv_whatsapp"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:src="@drawable/contact_whatsapp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/iv_gmail"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:src="@drawable/contact_gmail" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <ImageView
                            android:id="@+id/iv_map"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:src="@drawable/contact_map" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/grey" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="15dp"
                    android:text="@string/phone"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:drawableLeft="@drawable/contact_baseline_local_phone_24"
                    android:background="@drawable/bg_superdarkbrown" />

                <TextView
                    android:id="@+id/tv_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="15dp"
                    android:text="@string/about"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:drawableLeft="@drawable/contact_baseline_error_24"
                    android:background="@drawable/bg_brown" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</LinearLayout>

